[package]
name = "frosted"
version = "0.0.0"
edition = "2021"

[workspace]
members = ["examples/*"]

[workspace.dependencies]
iced = "0.9.0"
pollster = "0.3.0"

[dependencies]
iced = "0.9.0"
pollster = "0.3.0"

[profile.release]
codegen-units = 1
lto = true
debug = false

[profile.bench]
codegen-units = 1
